--- a/src/components/Navbar/mynavbar.css
+++ b/src/components/Navbar/mynavbar.css
@@ -1,5 +1,5 @@
 .logo {
-  width: 25%;
+  width: 10%;
 }
 
 .nav-theme {
@@ -8,7 +8,10 @@
 }
 
 .animate-navbar {
-  box-shadow: 2px 10px 10px #000;
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: center;
+  box-shadow: 3px 3px 3px #4c4b4b;
   animation: moveDown 0.5s ease-in-out;
 }
 
