--- a/src/pages/abouts/myabout.css
+++ b/src/pages/abouts/myabout.css
@@ -11,4 +11,18 @@
   background-color: #fff;
   margin-bottom:25px;
   box-shadow:35px;
+  margin: 10px;
+  padding: 20px !important;
+}
+
+.font-details {
+  font-size: 2.5em;
+  font-weight: 500;
+  color:#fff;
+}
+
+.cardDeck {
+  -webkit-box-shadow: 3px 0px 11px 0px rgba(0,0,0,0.73);
+-moz-box-shadow: 3px 0px 11px 0px rgba(0,0,0,0.73);
+box-shadow: 3px 0px 11px 0px rgba(0,0,0,0.73);
 }
