--- a/src/pages/skills/myskills.css
+++ b/src/pages/skills/myskills.css
@@ -1,9 +1,16 @@
 
 
-@media (min-width: 576px)
+/* @media (min-width: 576px)
 .card-deck {
   margin-left:120px;
+} */
+
+.cardDeck {
+  -webkit-box-shadow: 3px 0px 11px 0px rgba(0,0,0,0.73);
+-moz-box-shadow: 3px 0px 11px 0px rgba(0,0,0,0.73);
+box-shadow: 3px 0px 11px 0px rgba(0,0,0,0.73);
 }
+
 .focus {
   transition: transform 0.3s;
 }
@@ -24,11 +31,16 @@
 .font-details {
   font-size: 3em;
   font-weight: 500;
-  color: #231d5af8;
 }
 
 .font-details-b {
   font-size: 2.5em;
   font-weight: 500;
   color:#fff;
+}
+
+.card-content {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
